2002-12-04  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp: Added VrmlMatrix support
          to JavaScript binding.

2002-12-03  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlMatrix.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.h: Const-correctness
          improvements and exception specifications for VrmlMatrix.

        * src/openvrml/OpenVRML/node.cpp: Fixed field value type
          agreement test in Node::addRoute.

2002-12-02  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.h: Added OPENVRML_SCOPE to some API
          elements.

        * src/openvrml/OpenVRML/Makefile.am: ScriptJDK.h should not be
          installed.

        * src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/script.cpp: Consolidated route validity
          checking in Node::addRoute.

2002-11-30  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/Image.cpp: Gracefully handle the case
          where we're attempting to advance beyond the last frame of
          a MovieTexture.

        * src/openvrml/OpenVRML/vrml97node.cpp: Fix a couple of problems
          with MovieTexture nodes.

        * doc/conformance.html: Update conformance test results.

2002-11-23  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4: Use C++ when testing for libGLU.  libGLU may need to
          link with libstc++.

        * src/openvrml/OpenVRML/node.cpp:  Put Node's initializer list
          in the right order.

        * src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  libopenvrml-gl
          no longer depends on glut.

        * src/openvrml/OpenVRML/script.cpp:  Fixed bug in JavaScript